{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 34,
  "lineage": "9c78102d-557d-ad03-5367-2479e03bc82e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06788f9ea88ffef10",
            "arn": "arn:aws:ec2:sa-east-1:913524900574:elastic-ip/eipalloc-06788f9ea88ffef10",
            "domain": "vpc",
            "id": "eipalloc-06788f9ea88ffef10",
            "network_border_group": "sa-east-1",
            "public_dns": "ec2-54-94-0-151.sa-east-1.compute.amazonaws.com",
            "public_ip": "54.94.0.151",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-fiap-soat-t7-g48",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:913524900574:internet-gateway/igw-0d7eb4394fbec4fb2",
            "id": "igw-0d7eb4394fbec4fb2",
            "owner_id": "913524900574",
            "tags": {
              "Name": "igw-fiap-soat-t7-g48"
            },
            "tags_all": {
              "Name": "igw-fiap-soat-t7-g48"
            },
            "vpc_id": "vpc-0de089c4d928cef71"
          },
          "dependencies": [
            "aws_vpc.vpc-fiap-soat-t7-g48"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "k8s-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06788f9ea88ffef10",
            "association_id": "eipassoc-04e1666a09c2675e2",
            "connectivity_type": "public",
            "id": "nat-0caeb0091468b9ce0",
            "network_interface_id": "eni-0859a6679ba17bb68",
            "private_ip": "192.168.70.157",
            "public_ip": "54.94.0.151",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b407b55664fadedd",
            "tags": {
              "Name": "k8s-nat"
            },
            "tags_all": {
              "Name": "k8s-nat"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw-fiap-soat-t7-g48",
            "aws_subnet.public-sa-east-1a",
            "aws_vpc.vpc-fiap-soat-t7-g48"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:913524900574:route-table/rtb-0d190e5f8e4123087",
            "id": "rtb-0d190e5f8e4123087",
            "owner_id": "913524900574",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0caeb0091468b9ce0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de089c4d928cef71"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw-fiap-soat-t7-g48",
            "aws_nat_gateway.k8s-nat",
            "aws_subnet.public-sa-east-1a",
            "aws_vpc.vpc-fiap-soat-t7-g48"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:913524900574:route-table/rtb-01f6c6ae78c4f563d",
            "id": "rtb-01f6c6ae78c4f563d",
            "owner_id": "913524900574",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d7eb4394fbec4fb2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de089c4d928cef71"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw-fiap-soat-t7-g48",
            "aws_vpc.vpc-fiap-soat-t7-g48"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-sa-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-099d4f5861ee67157",
            "route_table_id": "rtb-0d190e5f8e4123087",
            "subnet_id": "subnet-0f75a8ee4748c4cb5"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw-fiap-soat-t7-g48",
            "aws_nat_gateway.k8s-nat",
            "aws_route_table.private",
            "aws_subnet.private-sa-east-1a",
            "aws_subnet.public-sa-east-1a",
            "aws_vpc.vpc-fiap-soat-t7-g48"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-sa-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-098e64a2ab9df52f2",
            "route_table_id": "rtb-0d190e5f8e4123087",
            "subnet_id": "subnet-03ac0a8ee6d46b975"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw-fiap-soat-t7-g48",
            "aws_nat_gateway.k8s-nat",
            "aws_route_table.private",
            "aws_subnet.private-sa-east-1b",
            "aws_subnet.public-sa-east-1a",
            "aws_vpc.vpc-fiap-soat-t7-g48"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-sa-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4fc457da9ba9500",
            "route_table_id": "rtb-01f6c6ae78c4f563d",
            "subnet_id": "subnet-0b407b55664fadedd"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public-sa-east-1a",
            "aws_vpc.vpc-fiap-soat-t7-g48"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-sa-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad46bece91374c60",
            "route_table_id": "rtb-01f6c6ae78c4f563d",
            "subnet_id": "subnet-063d05eafec333788"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public-sa-east-1b",
            "aws_vpc.vpc-fiap-soat-t7-g48"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-sa-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:913524900574:subnet/subnet-0f75a8ee4748c4cb5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "192.168.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f75a8ee4748c4cb5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "913524900574",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-sa-east-1a",
              "kubernetes.io/cluster/fiap-soat-t7-g48": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-sa-east-1a",
              "kubernetes.io/cluster/fiap-soat-t7-g48": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0de089c4d928cef71"
          },
          "dependencies": [
            "aws_vpc.vpc-fiap-soat-t7-g48"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-sa-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:913524900574:subnet/subnet-03ac0a8ee6d46b975",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1b",
            "availability_zone_id": "sae1-az2",
            "cidr_block": "192.168.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ac0a8ee6d46b975",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "913524900574",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-sa-east-1b",
              "kubernetes.io/cluster/fiap-soat-t7-g48": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-sa-east-1b",
              "kubernetes.io/cluster/fiap-soat-t7-g48": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0de089c4d928cef71"
          },
          "dependencies": [
            "aws_vpc.vpc-fiap-soat-t7-g48"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-sa-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:913524900574:subnet/subnet-0b407b55664fadedd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "192.168.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b407b55664fadedd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "913524900574",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-sa-east-1a",
              "kubernetes.io/cluster/fiap-soat-t7-g48": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-sa-east-1a",
              "kubernetes.io/cluster/fiap-soat-t7-g48": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0de089c4d928cef71"
          },
          "dependencies": [
            "aws_vpc.vpc-fiap-soat-t7-g48"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-sa-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:913524900574:subnet/subnet-063d05eafec333788",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1b",
            "availability_zone_id": "sae1-az2",
            "cidr_block": "192.168.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-063d05eafec333788",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "913524900574",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-sa-east-1b",
              "kubernetes.io/cluster/fiap-soat-t7-g48": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-sa-east-1b",
              "kubernetes.io/cluster/fiap-soat-t7-g48": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0de089c4d928cef71"
          },
          "dependencies": [
            "aws_vpc.vpc-fiap-soat-t7-g48"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-fiap-soat-t7-g48",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:913524900574:vpc/vpc-0de089c4d928cef71",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-096b5451c4408d129",
            "default_route_table_id": "rtb-0948f4fef31e30ee4",
            "default_security_group_id": "sg-029bb25f3544d6a44",
            "dhcp_options_id": "dopt-0d3db7125b8655631",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0de089c4d928cef71",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0948f4fef31e30ee4",
            "owner_id": "913524900574",
            "tags": {
              "Name": "vpc-fiap-soat-t7-g48"
            },
            "tags_all": {
              "Name": "vpc-fiap-soat-t7-g48"
            }
          }
        }
      ]
    }
  ]
}